# launchjira

./: README.md  README.rst  requirements.txt  setup.cfg
LaunchJira/: __init__.py
LaunchJira/tests/: test_LaunchJira.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
